--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/jcsd
 username=root
-password=admin
+password=anlzou
 #定义初始连接数
 initialSize=0
 #定义最大连接数
